--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <div class="container col-6">
-        <h2>Login</h2>
+        <h2 style="text-align: center">Login</h2>
         <div class="col-md-auto">
-
             <form th:object="${user}" th:action="login" method="post">
+                <div>
+                    <span style="color: red" th:text="${param.msg}"></span>
+                </div>
                 <div class="form-group">
                     <label th:text="Username" th:for="username"></label>
                     <input type="text" class="form-control"
